Add rounded corners and color details

--- a/index.html
+++ b/index.html
@@ -6,292 +6,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="row" id="row1">
-        <div class="collumn1" id="R1C1"></div>
-        <div class="collumn2" id="R1C2"></div>
-        <div class="collumn3" id="R1C3"></div>
-        <div class="collumn4" id="R1C4"></div>
-        <div class="collumn4" id="R1C5"></div>
-        <div class="collumn6" id="R1C6"></div>
-        <div class="collumn7" id="R1C7"></div>
-        <div class="collumn8" id="R1C8"></div>
-        <div class="collumn9" id="R1C9"></div>
-        <div class="collumn10" id="R1C10"></div>
-        <div class="collumn11" id="R1C11"></div>
-        <div class="collumn12" id="R1C12"></div>
-        <div class="collumn13" id="R1C13"></div>
-        <div class="collumn14" id="R1C14"></div>
-        <div class="collumn15" id="R1C15"></div>
-        <div class="collumn16" id="R1C16"></div>
-    </div>
-    <div class="row" id="row2">
-        <div class="collumn1" id="R2C1"></div>
-        <div class="collumn2" id="R2C2"></div>
-        <div class="collumn3" id="R2C3"></div>
-        <div class="collumn4" id="R2C4"></div>
-        <div class="collumn4" id="R2C5"></div>
-        <div class="collumn6" id="R2C6"></div>
-        <div class="collumn7" id="R2C7"></div>
-        <div class="collumn8" id="R2C8"></div>
-        <div class="collumn9" id="R2C9"></div>
-        <div class="collumn10" id="R2C10"></div>
-        <div class="collumn11" id="R2C11"></div>
-        <div class="collumn12" id="R2C12"></div>
-        <div class="collumn13" id="R2C13"></div>
-        <div class="collumn14" id="R2C14"></div>
-        <div class="collumn15" id="R2C15"></div>
-        <div class="collumn16" id="R2C16"></div>
-    </div>
-    <div class="row" id="row3">
-        <div class="collumn1" id="R3C1"></div>
-        <div class="collumn2" id="R3C2"></div>
-        <div class="collumn3" id="R3C3"></div>
-        <div class="collumn4" id="R3C4"></div>
-        <div class="collumn4" id="R3C5"></div>
-        <div class="collumn6" id="R3C6"></div>
-        <div class="collumn7" id="R3C7"></div>
-        <div class="collumn8" id="R3C8"></div>
-        <div class="collumn9" id="R3C9"></div>
-        <div class="collumn10" id="R3C10"></div>
-        <div class="collumn11" id="R3C11"></div>
-        <div class="collumn12" id="R3C12"></div>
-        <div class="collumn13" id="R3C13"></div>
-        <div class="collumn14" id="R3C14"></div>
-        <div class="collumn15" id="R3C15"></div>
-        <div class="collumn16" id="R3C16"></div>
-    </div>
-    <div class="row" id="row4">
-        <div class="collumn1" id="R4C1"></div>
-        <div class="collumn2" id="R4C2"></div>
-        <div class="collumn3" id="R4C3"></div>
-        <div class="collumn4" id="R4C4"></div>
-        <div class="collumn4" id="R4C5"></div>
-        <div class="collumn6" id="R4C6"></div>
-        <div class="collumn7" id="R4C7"></div>
-        <div class="collumn8" id="R4C8"></div>
-        <div class="collumn9" id="R4C9"></div>
-        <div class="collumn10" id="R4C10"></div>
-        <div class="collumn11" id="R4C11"></div>
-        <div class="collumn12" id="R4C12"></div>
-        <div class="collumn13" id="R4C13"></div>
-        <div class="collumn14" id="R4C14"></div>
-        <div class="collumn15" id="R4C15"></div>
-        <div class="collumn16" id="R4C16"></div>
-    </div>
-    <div class="row" id="row5">
-        <div class="collumn1" id="R5C1"></div>
-        <div class="collumn2" id="R5C2"></div>
-        <div class="collumn3" id="R5C3"></div>
-        <div class="collumn4" id="R5C4"></div>
-        <div class="collumn4" id="R5C5"></div>
-        <div class="collumn6" id="R5C6"></div>
-        <div class="collumn7" id="R5C7"></div>
-        <div class="collumn8" id="R5C8"></div>
-        <div class="collumn9" id="R5C9"></div>
-        <div class="collumn10" id="R5C10"></div>
-        <div class="collumn11" id="R5C11"></div>
-        <div class="collumn12" id="R5C12"></div>
-        <div class="collumn13" id="R5C13"></div>
-        <div class="collumn14" id="R5C14"></div>
-        <div class="collumn15" id="R5C15"></div>
-        <div class="collumn16" id="R5C16"></div>
-    </div>
-    <div class="row" id="row6">
-        <div class="collumn1" id="R6C1"></div>
-        <div class="collumn2" id="R6C2"></div>
-        <div class="collumn3" id="R6C3"></div>
-        <div class="collumn4" id="R6C4"></div>
-        <div class="collumn4" id="R6C5"></div>
-        <div class="collumn6" id="R6C6"></div>
-        <div class="collumn7" id="R6C7"></div>
-        <div class="collumn8" id="R6C8"></div>
-        <div class="collumn9" id="R6C9"></div>
-        <div class="collumn10" id="R6C10"></div>
-        <div class="collumn11" id="R6C11"></div>
-        <div class="collumn12" id="R6C12"></div>
-        <div class="collumn13" id="R6C13"></div>
-        <div class="collumn14" id="R6C14"></div>
-        <div class="collumn15" id="R6C15"></div>
-        <div class="collumn16" id="R6C16"></div>
-    </div>
-    <div class="row" id="row7">
-        <div class="collumn1" id="R7C1"></div>
-        <div class="collumn2" id="R7C2"></div>
-        <div class="collumn3" id="R7C3"></div>
-        <div class="collumn4" id="R7C4"></div>
-        <div class="collumn4" id="R7C5"></div>
-        <div class="collumn6" id="R7C6"></div>
-        <div class="collumn7" id="R7C7"></div>
-        <div class="collumn8" id="R7C8"></div>
-        <div class="collumn9" id="R7C9"></div>
-        <div class="collumn10" id="R7C10"></div>
-        <div class="collumn11" id="R7C11"></div>
-        <div class="collumn12" id="R7C12"></div>
-        <div class="collumn13" id="R7C13"></div>
-        <div class="collumn14" id="R7C14"></div>
-        <div class="collumn15" id="R7C15"></div>
-        <div class="collumn16" id="R7C16"></div>
-    </div>
-    <div class="row" id="row8">
-        <div class="collumn1" id="R8C1"></div>
-        <div class="collumn2" id="R8C2"></div>
-        <div class="collumn3" id="R8C3"></div>
-        <div class="collumn4" id="R8C4"></div>
-        <div class="collumn4" id="R8C5"></div>
-        <div class="collumn6" id="R8C6"></div>
-        <div class="collumn7" id="R8C7"></div>
-        <div class="collumn8" id="R8C8"></div>
-        <div class="collumn9" id="R8C9"></div>
-        <div class="collumn10" id="R8C10"></div>
-        <div class="collumn11" id="R8C11"></div>
-        <div class="collumn12" id="R8C12"></div>
-        <div class="collumn13" id="R8C13"></div>
-        <div class="collumn14" id="R8C14"></div>
-        <div class="collumn15" id="R8C15"></div>
-        <div class="collumn16" id="R8C16"></div>
-    </div>
-    <div class="row" id="row9">
-        <div class="collumn1" id="R9C1"></div>
-        <div class="collumn2" id="R9C2"></div>
-        <div class="collumn3" id="R9C3"></div>
-        <div class="collumn4" id="R9C4"></div>
-        <div class="collumn4" id="R9C5"></div>
-        <div class="collumn6" id="R9C6"></div>
-        <div class="collumn7" id="R9C7"></div>
-        <div class="collumn8" id="R9C8"></div>
-        <div class="collumn9" id="R9C9"></div>
-        <div class="collumn10" id="R9C10"></div>
-        <div class="collumn11" id="R9C11"></div>
-        <div class="collumn12" id="R9C12"></div>
-        <div class="collumn13" id="R9C13"></div>
-        <div class="collumn14" id="R9C14"></div>
-        <div class="collumn15" id="R9C15"></div>
-        <div class="collumn16" id="R9C16"></div>
-    </div>
-    <div class="row" id="row10">
-        <div class="collumn1" id="R10C1"></div>
-        <div class="collumn2" id="R10C2"></div>
-        <div class="collumn3" id="R10C3"></div>
-        <div class="collumn4" id="R10C4"></div>
-        <div class="collumn4" id="R10C5"></div>
-        <div class="collumn6" id="R10C6"></div>
-        <div class="collumn7" id="R10C7"></div>
-        <div class="collumn8" id="R10C8"></div>
-        <div class="collumn9" id="R10C9"></div>
-        <div class="collumn10" id="R10C10"></div>
-        <div class="collumn11" id="R10C11"></div>
-        <div class="collumn12" id="R10C12"></div>
-        <div class="collumn13" id="R10C13"></div>
-        <div class="collumn14" id="R10C14"></div>
-        <div class="collumn15" id="R10C15"></div>
-        <div class="collumn16" id="R10C16"></div>
-    </div>
-    <div class="row" id="row11">
-        <div class="collumn1" id="R11C1"></div>
-        <div class="collumn2" id="R11C2"></div>
-        <div class="collumn3" id="R11C3"></div>
-        <div class="collumn4" id="R11C4"></div>
-        <div class="collumn4" id="R11C5"></div>
-        <div class="collumn6" id="R11C6"></div>
-        <div class="collumn7" id="R11C7"></div>
-        <div class="collumn8" id="R11C8"></div>
-        <div class="collumn9" id="R11C9"></div>
-        <div class="collumn10" id="R11C10"></div>
-        <div class="collumn11" id="R11C11"></div>
-        <div class="collumn12" id="R11C12"></div>
-        <div class="collumn13" id="R11C13"></div>
-        <div class="collumn14" id="R11C14"></div>
-        <div class="collumn15" id="R11C15"></div>
-        <div class="collumn16" id="R11C16"></div>
-    </div>
-    <div class="row" id="row12">
-        <div class="collumn1" id="R12C1"></div>
-        <div class="collumn2" id="R12C2"></div>
-        <div class="collumn3" id="R12C3"></div>
-        <div class="collumn4" id="R12C4"></div>
-        <div class="collumn4" id="R12C5"></div>
-        <div class="collumn6" id="R12C6"></div>
-        <div class="collumn7" id="R12C7"></div>
-        <div class="collumn8" id="R12C8"></div>
-        <div class="collumn9" id="R12C9"></div>
-        <div class="collumn10" id="R12C10"></div>
-        <div class="collumn11" id="R12C11"></div>
-        <div class="collumn12" id="R12C12"></div>
-        <div class="collumn13" id="R12C13"></div>
-        <div class="collumn14" id="R12C14"></div>
-        <div class="collumn15" id="R12C15"></div>
-        <div class="collumn16" id="R12C16"></div>
-    </div>
-    <div class="row" id="row13">
-        <div class="collumn1" id="R13C1"></div>
-        <div class="collumn2" id="R13C2"></div>
-        <div class="collumn3" id="R13C3"></div>
-        <div class="collumn4" id="R13C4"></div>
-        <div class="collumn4" id="R13C5"></div>
-        <div class="collumn6" id="R13C6"></div>
-        <div class="collumn7" id="R13C7"></div>
-        <div class="collumn8" id="R13C8"></div>
-        <div class="collumn9" id="R13C9"></div>
-        <div class="collumn10" id="R13C10"></div>
-        <div class="collumn11" id="R13C11"></div>
-        <div class="collumn12" id="R13C12"></div>
-        <div class="collumn13" id="R13C13"></div>
-        <div class="collumn14" id="R13C14"></div>
-        <div class="collumn15" id="R13C15"></div>
-        <div class="collumn16" id="R13C16"></div>
-    </div>
-    <div class="row" id="row14">
-        <div class="collumn1" id="R14C1"></div>
-        <div class="collumn2" id="R14C2"></div>
-        <div class="collumn3" id="R14C3"></div>
-        <div class="collumn4" id="R14C4"></div>
-        <div class="collumn4" id="R14C5"></div>
-        <div class="collumn6" id="R14C6"></div>
-        <div class="collumn7" id="R14C7"></div>
-        <div class="collumn8" id="R14C8"></div>
-        <div class="collumn9" id="R14C9"></div>
-        <div class="collumn10" id="R14C10"></div>
-        <div class="collumn11" id="R14C11"></div>
-        <div class="collumn12" id="R14C12"></div>
-        <div class="collumn13" id="R14C13"></div>
-        <div class="collumn14" id="R14C14"></div>
-        <div class="collumn15" id="R14C15"></div>
-        <div class="collumn16" id="R14C16"></div>
-    </div>
-    <div class="row" id="row15">
-        <div class="collumn1" id="R15C1"></div>
-        <div class="collumn2" id="R15C2"></div>
-        <div class="collumn3" id="R15C3"></div>
-        <div class="collumn4" id="R15C4"></div>
-        <div class="collumn4" id="R15C5"></div>
-        <div class="collumn6" id="R15C6"></div>
-        <div class="collumn7" id="R15C7"></div>
-        <div class="collumn8" id="R15C8"></div>
-        <div class="collumn9" id="R15C9"></div>
-        <div class="collumn10" id="R15C10"></div>
-        <div class="collumn11" id="R15C11"></div>
-        <div class="collumn12" id="R15C12"></div>
-        <div class="collumn13" id="R15C13"></div>
-        <div class="collumn14" id="R15C14"></div>
-        <div class="collumn15" id="R15C15"></div>
-        <div class="collumn16" id="R15C16"></div>
-    </div>
-    <div class="row" id="row16">
-        <div class="collumn1" id="R16C1"></div>
-        <div class="collumn2" id="R16C2"></div>
-        <div class="collumn3" id="R16C3"></div>
-        <div class="collumn4" id="R16C4"></div>
-        <div class="collumn4" id="R16C5"></div>
-        <div class="collumn6" id="R16C6"></div>
-        <div class="collumn7" id="R16C7"></div>
-        <div class="collumn8" id="R16C8"></div>
-        <div class="collumn9" id="R16C9"></div>
-        <div class="collumn10" id="R16C10"></div>
-        <div class="collumn11" id="R16C11"></div>
-        <div class="collumn12" id="R16C12"></div>
-        <div class="collumn13" id="R16C13"></div>
-        <div class="collumn14" id="R16C14"></div>
-        <div class="collumn15" id="R16C15"></div>
-        <div class="collumn16" id="R16C16"></div>
+    <div id="texture">
+        <div id="board"></div>
     </div>
 </body>
